# tele-acp

./: AGENTS.md  README.md  pyproject.toml
.zed/: debug.json  settings.json
docs/: Configutation.md
docs/development/task-management/: README.md
docs/development/task-management/template/000000T0000-task-template/: TASK.md
docs/development/tasks/260407T1402-add-acp-registry-support/: TASK.md
docs/development/tasks/260412T2244-add-auth-login-qrcode/: TASK.md
src/susie/: logger.py  shared.py
src/susie/acp/: __init__.py  models.py  registry.py
src/susie/app/: app.py
src/susie/cli/: __init__.py  acp.py  auth.py
src/tele_acp/: __init__.py  config.py  connection.py  constant.py  session.py  shared.py  telegram.py  thread.py
src/tele_acp/acp/: __init__.py  client.py  connection.py  message.py  runtime.py
src/tele_acp/agent/: __init__.py  agent.py  thread.py
src/tele_acp/app/: __init__.py  app.py  channels.py  chats.py  dialog.py
src/tele_acp/channel/: __init__.py  hub.py  telegram.py
src/tele_acp/channel/client/: telegram.py
src/tele_acp/chat/: chat.py  inspect.py  manager.py
src/tele_acp/cli/: __init__.py  auth.py  mainloop.py  shared.py  types.py
src/tele_acp/command/: __init__.py  center.py  chain.py  executor.py
src/tele_acp/mcp/: __init__.py
src/tele_acp/replier/: agent.py  command.py  compose.py  hub.py
src/tele_acp/types/: __init__.py  acp.py  agent.py  channel.py  chat.py  config.py  error.py  serialization.py
src/tele_acp/types/tl/: __init__.py
src/tele_acp/utils/: __init__.py  fmt.py  output.py  throttle.py
