[project]
name = "tele-acp"
version = "2026.1.0"
description = "ACP Interface On Telegram"
readme = "README.md"
authors = [
  {name = "Huanan"}
]
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.8.1",
    "arrow>=1.4.0",
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "rich>=14.3.2",
    "telethon>=1.42.0",
    "tomlkit>=0.14.0",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["tele_acp"]
source-exclude = ["tests/**/*"]

[tool.uv.sources]
tele-acp = { workspace = true }

[project.scripts]
xie = "tele_acp.cli:cli"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
fixable = ["F401"]
