[project]
name = "tele-acp"
version = "2026.3.0"
description = "Chat with agents on Telegram through ACP."
readme = "README.md"
authors = [
  {name = "Huanan"}
]
requires-python = ">=3.14"
dependencies = [
    # inner
    "tele-acp-core>=0.1.0",
    "telegram-channel>=0.1.0",
    # data model
    "pydantic>=2.12.5",
    "arrow>=1.4.0",
    "dateparser>=1.3.0",
    "tomlkit>=0.14.0",
    # sdks
    "agent-client-protocol>=0.8.1",
    "mcp>=1.26.0",
    # cli
    "typer>=0.23.1",
    "rich>=14.3.2",
    "click>=8.3.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["tele_acp"]
source-exclude = ["tests/**/*"]

[tool.uv.workspace]
members = [
    "packages/tele_acp_core",
    "packages/telegram_channel",
]

[tool.uv.sources]
tele-acp = { workspace = true }
tele-acp-core = { workspace = true }
telegram-channel = { workspace = true }

[project.scripts]
susie = "tele_acp.cli:cli"

[tool.ruff]
line-length = 160

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
