[project]
name = "tele-acp"
version = "2026.4.0"
description = "Chat with agents on Telegram through ACP."
readme = "README.md"
authors = [
  {name = "Huanan"}
]
requires-python = ">=3.14"
dependencies = [
    # inner
    "susie-core>=0.1.0",
    "telegram-channel>=0.1.0",
    # data model
    "aiohttp>=3.12.15",
    "pydantic>=2.12.5",
    "arrow>=1.4.0",
    "dateparser>=1.3.0",
    "tomlkit>=0.14.0",
    # sdks
    "agent-client-protocol>=0.8.1",
    "mcp>=1.26.0",
    # cli
    "typer==0.24.1",
    "rich==14.3.3",
    "click>=8.3.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "ruff==0.15.7",
    "ty==0.0.24",
    "types-dateparser>=1.4.0.20260328",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["susie"]
source-exclude = ["tests/**/*"]

[tool.uv.workspace]
members = [
    "packages/susie_core",
    "packages/telegram_channel",
]

[tool.uv.sources]
susie = { workspace = true }
susie-core = { workspace = true }
telegram-channel = { workspace = true }

[project.scripts]
susie = "susie.cli:cli"

[tool.ruff]
line-length = 160

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[[tool.mypy.overrides]]
module = ["telethon.*"]
follow_untyped_imports = true
